# bot_navigation_module

./: README.md
leader_follower_navigation/: package.xml  setup.cfg  setup.py
leader_follower_navigation/launch/: follow_bot.launch.py  gazebo.launch.py
leader_follower_navigation/leader_follower_navigation/: follower.py
leader_follower_navigation/urdf/: follower.urdf  leader.urdf
nav2_bot/: CMakeLists.txt  README.md  package.xml
nav2_bot/launch/: gazebo.launch.py  rviz.launch.py
nav2_bot/params/: nav2_params.yaml
nav2_bot/src/: wp_navigation.cpp
nav2_bot_world/: package.xml  setup.cfg  setup.py
nav2_bot_world/launch/: robot.launch.xml
nav2_bot_world/rviz/: bot_config.rviz
nav2_bot_world/urdf/: robot.urdf.xacro
robot_controller/: CMakeLists.txt  README.md  package.xml
robot_controller/launch/: robot.launch.xml  robot_controller.launch.xml
robot_controller/src/: gazebo_rpm_plugin.cpp  rpm_vel_controller.cpp
robot_controller/urdf/: robot.urdf.xacro
waypoint_navigator/: README.md  package.xml  setup.py
waypoint_navigator/launch/: robot.launch.xml
waypoint_navigator/waypoint_navigator/: waypoint_navigation.py
